# germany-mcp-server

./: .gitignore  README.md  pyproject.toml
src/: config.py  server.py
src/clients/: autobahn.py  brightsky.py  bundestag.py  destatis.py  dwd_warnings.py  food_warnings.py  gesetze.py  nina.py  pollen.py  smard.py
src/tools/: dwd_warnungen.py  energie.py  energiepreise.py  gesundheit.py  politik.py  recht.py  statistik.py  verkehr.py  warnungen.py  wetter.py
